--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="base\TextureManager.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlayerBullet.cpp" />
     <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="scene\affin.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
@@ -129,6 +130,7 @@
     <ClInclude Include="math\Vector2.h" />
     <ClInclude Include="math\Vector3.h" />
     <ClInclude Include="math\Vector4.h" />
+    <ClInclude Include="PlayerBullet.h" />
     <ClInclude Include="Player\Player.h" />
     <ClInclude Include="scene\affin.h" />
     <ClInclude Include="scene\GameScene.h" />
