--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -98,8 +98,8 @@
     <ClCompile Include="base\TextureManager.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="PlayerBullet.cpp" />
     <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Player\PlayerBullet.cpp" />
     <ClCompile Include="scene\affin.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
   </ItemGroup>
@@ -130,8 +130,8 @@
     <ClInclude Include="math\Vector2.h" />
     <ClInclude Include="math\Vector3.h" />
     <ClInclude Include="math\Vector4.h" />
-    <ClInclude Include="PlayerBullet.h" />
     <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Player\PlayerBullet.h" />
     <ClInclude Include="scene\affin.h" />
     <ClInclude Include="scene\GameScene.h" />
   </ItemGroup>
