--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="Player\PlayerBullet.cpp" />
     <ClCompile Include="scene\affin.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
+    <ClCompile Include="Skydome.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\DebugText.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="Player\PlayerBullet.h" />
     <ClInclude Include="scene\affin.h" />
     <ClInclude Include="scene\GameScene.h" />
+    <ClInclude Include="Skydome.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Obj.hlsli" />
