--- a/DirectXGame.vcxproj.filters
+++ b/DirectXGame.vcxproj.filters
@@ -55,6 +55,24 @@
     <Filter Include="ヘッダー ファイル\Player">
       <UniqueIdentifier>{c8104f5b-04f4-4b2e-a6a1-e57ca2eb6ad4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\RailCamera">
+      <UniqueIdentifier>{7d6bfd4d-44d9-4315-8ab3-6bc8d7dc0d0e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Skydome">
+      <UniqueIdentifier>{dddeaf45-69cf-4cf2-9848-1ed7ae4f22a1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Enemy">
+      <UniqueIdentifier>{5c170e34-8012-4d70-83a9-cf3b6155103c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\base\Enemy">
+      <UniqueIdentifier>{0aadf3f2-42fd-4435-8c45-b2881b81f72a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\base\RailCamera">
+      <UniqueIdentifier>{d3c03d5d-1407-41da-9f71-a09d3a21f6d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\base\Skydome">
+      <UniqueIdentifier>{f5eccf88-d622-47ed-83de-157c7fbab90c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -81,20 +99,32 @@
     <ClCompile Include="Player\PlayerBullet.cpp">
       <Filter>ソース ファイル\Player</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy\Enemy.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyBullet.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Skydome.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="RailCamera.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Vector3.cpp">
+    <ClCompile Include="math\Vector3.cpp">
       <Filter>ソース ファイル\math</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\EnemyBullet.cpp">
+      <Filter>ソース ファイル\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\Enemy.cpp">
+      <Filter>ソース ファイル\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Skydome\Skydome.cpp">
+      <Filter>ソース ファイル\Skydome</Filter>
+    </ClCompile>
+    <ClCompile Include="RailCamera\RailCamera.cpp">
+      <Filter>ソース ファイル\RailCamera</Filter>
+    </ClCompile>
+    <ClCompile Include="scene\GameClear.cpp">
+      <Filter>ソース ファイル\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="scene\GameOver.cpp">
+      <Filter>ソース ファイル\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="scene\push.cpp">
+      <Filter>ソース ファイル\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="scene\Title.cpp">
+      <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -189,16 +219,28 @@
       <Filter>ヘッダー ファイル\Player</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\Enemy.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\base\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyBullet.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Enemy\EnemyBullet.h">
+      <Filter>ヘッダー ファイル\base\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="Skydome.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Skydome\Skydome.h">
+      <Filter>ヘッダー ファイル\base\Skydome</Filter>
     </ClInclude>
-    <ClInclude Include="RailCamera.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="RailCamera\RailCamera.h">
+      <Filter>ヘッダー ファイル\base\RailCamera</Filter>
+    </ClInclude>
+    <ClInclude Include="scene\GameClear.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="scene\GameOver.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="scene\push.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="scene\Title.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
