天球を飛び越えずMSと変形を追加

--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="base\WinApp.cpp" />
     <ClCompile Include="Enemy\Enemy.cpp" />
     <ClCompile Include="Enemy\EnemyBullet.cpp" />
+    <ClCompile Include="FPS.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math\Vector3.cpp" />
     <ClCompile Include="Player\Player.cpp" />
@@ -135,6 +136,8 @@
     <ClInclude Include="base\WinApp.h" />
     <ClInclude Include="Enemy\Enemy.h" />
     <ClInclude Include="Enemy\EnemyBullet.h" />
+    <ClInclude Include="ErrorException.h" />
+    <ClInclude Include="FPS.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="math\MathUtility.h" />
     <ClInclude Include="math\Matrix4.h" />
