地面と音のその理由

--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Enemy\Enemy.cpp" />
     <ClCompile Include="Enemy\EnemyBullet.cpp" />
     <ClCompile Include="FPS.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math\Vector3.cpp" />
     <ClCompile Include="Player\Player.cpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="Enemy\EnemyBullet.h" />
     <ClInclude Include="ErrorException.h" />
     <ClInclude Include="FPS.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="math\MathUtility.h" />
     <ClInclude Include="math\Matrix4.h" />
