フィールド実装した

--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Effect\Effect.cpp" />
     <ClCompile Include="Enemy\Enemy.cpp" />
     <ClCompile Include="Enemy\EnemyBullet.cpp" />
+    <ClCompile Include="FieldObj.cpp" />
     <ClCompile Include="FPS.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="main.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="Enemy\Enemy.h" />
     <ClInclude Include="Enemy\EnemyBullet.h" />
     <ClInclude Include="ErrorException.h" />
+    <ClInclude Include="FieldObj.h" />
     <ClInclude Include="FPS.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="input\Input.h" />
